Scream Card Details
Also updated nodejs version for firebase functions and some other stuff.

--- a/socialape-client/package.json
+++ b/socialape-client/package.json
@@ -2,11 +2,13 @@
   "name": "socialape-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://asia-east2-socialape-9c923.cloudfunctions.net/api",
   "dependencies": {
-    "@material-ui/core": "^4.10.1",
+    "@material-ui/core": "^4.10.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
