--- a/socialape-client/package.json
+++ b/socialape-client/package.json
@@ -5,6 +5,7 @@
   "proxy": "https://asia-east2-socialape-9c923.cloudfunctions.net/api",
   "dependencies": {
     "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
