--- a/socialape-functions/functions/package.json
+++ b/socialape-functions/functions/package.json
@@ -13,13 +13,15 @@
   },
   "dependencies": {
     "busboy": "^0.3.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "firebase": "^7.15.3",
-    "firebase-admin": "^8.12.1",
-    "firebase-functions": "^3.7.0"
+    "firebase": "^7.15.5",
+    "firebase-admin": "^8.10.0",
+    "firebase-functions": "^3.6.1",
+    "uuidv4": "^6.1.1"
   },
   "devDependencies": {
-    "firebase-functions-test": "^0.2.1"
+    "firebase-functions-test": "^0.2.0"
   },
   "private": true
 }
